puting value to transction
